@@ -29,7 +29,7 @@ lemma is_seminormI [intro]:
   ==> is_seminorm V norm";
   by (unfold is_seminorm_def, force);
 
-lemma seminorm_ge_zero [intro!!]:
+lemma seminorm_ge_zero [intro??]:
   "[| is_seminorm V norm; x:V |] ==> 0r <= norm x";
   by (unfold is_seminorm_def, force);
 
@@ -85,7 +85,7 @@ lemma is_normI [intro]:
   "ALL x: V.  is_seminorm V norm  & (norm x = 0r) = (x = <0>) 
   ==> is_norm V norm"; by (simp only: is_norm_def);
 
-lemma norm_is_seminorm [intro!!]: 
+lemma norm_is_seminorm [intro??]: 
   "[| is_norm V norm; x:V |] ==> is_seminorm V norm";
   by (unfold is_norm_def, force);
 
@@ -93,7 +93,7 @@ lemma norm_zero_iff:
   "[| is_norm V norm; x:V |] ==> (norm x = 0r) = (x = <0>)";
   by (unfold is_norm_def, force);
 
-lemma norm_ge_zero [intro!!]:
+lemma norm_ge_zero [intro??]:
   "[|is_norm V norm; x:V |] ==> 0r <= norm x";
   by (unfold is_norm_def is_seminorm_def, force);
 
@@ -115,19 +115,19 @@ lemma normed_vsI [intro]:
   ==> is_normed_vectorspace V norm";
   by (unfold is_normed_vectorspace_def) blast; 
 
-lemma normed_vs_vs [intro!!]: 
+lemma normed_vs_vs [intro??]: 
   "is_normed_vectorspace V norm ==> is_vectorspace V";
   by (unfold is_normed_vectorspace_def) force;
 
-lemma normed_vs_norm [intro!!]: 
+lemma normed_vs_norm [intro??]: 
   "is_normed_vectorspace V norm ==> is_norm V norm";
   by (unfold is_normed_vectorspace_def, elim conjE);
 
-lemma normed_vs_norm_ge_zero [intro!!]: 
+lemma normed_vs_norm_ge_zero [intro??]: 
   "[| is_normed_vectorspace V norm; x:V |] ==> 0r <= norm x";
   by (unfold is_normed_vectorspace_def, rule, elim conjE);
 
-lemma normed_vs_norm_gt_zero [intro!!]: 
+lemma normed_vs_norm_gt_zero [intro??]: 
   "[| is_normed_vectorspace V norm; x:V; x ~= <0> |] ==> 0r < norm x";
 proof (unfold is_normed_vectorspace_def, elim conjE);
   assume "x : V" "x ~= <0>" "is_vectorspace V" "is_norm V norm";
@@ -142,13 +142,13 @@ proof (unfold is_normed_vectorspace_def, elim conjE);
   finally; show "0r < norm x"; .;
 qed;
 
-lemma normed_vs_norm_rabs_homogenous [intro!!]: 
+lemma normed_vs_norm_rabs_homogenous [intro??]: 
   "[| is_normed_vectorspace V norm; x:V |] 
   ==> norm (a <*> x) = (rabs a) * (norm x)";
   by (rule seminorm_rabs_homogenous, rule norm_is_seminorm, 
       rule normed_vs_norm);
 
-lemma normed_vs_norm_subadditive [intro!!]: 
+lemma normed_vs_norm_subadditive [intro??]: 
   "[| is_normed_vectorspace V norm; x:V; y:V |] 
   ==> norm (x + y) <= norm x + norm y";
   by (rule seminorm_subadditive, rule norm_is_seminorm, 
@@ -157,7 +157,7 @@ lemma normed_vs_norm_subadditive [intro!!]:
 text{* Any subspace of a normed vector space is again a 
 normed vectorspace.*};
 
-lemma subspace_normed_vs [intro!!]: 
+lemma subspace_normed_vs [intro??]: 
   "[| is_subspace F E; is_vectorspace E; 
   is_normed_vectorspace E norm |] ==> is_normed_vectorspace F norm";
 proof (rule normed_vsI);
